20-05-22

Zip on auto backup - the drive will fill a lot slower

zk security patch

Various bug fixes, one that affects globe production. This needs to be tested on UAT

28-04-22

UI updates for Ed P prod

ZK/POI fixes

Side menu work

External connections (snowflake) work

11-03-22

Urgent bug fix related to xlsx file name lengths - make the eightcharint function actually do its job!

Upgrade Icons

Connection manager. not currently usd by Ed Broking


22-02-22

remove debug code with a hard coded directory

CSS tweak in new UI so images show on reports

Groovy switch for latest premium version for all risks

17-02-22

Improved orphan and deduplication instructions

Persisting after a manual execute fix

18-01-22

pre processor upgrades, mainly to support bringing in All Risks

26-11-21

Roles work - additional functionality for the user home menu

security fix on new login form

download file on audit

ability to download reports into preprocessor

new UI bug fixes

28-10-21

work on ignoring blank lines and correction of 'copyrange' bug in workbook preprocessor where one extra line was copied

ability to download reports into preprocessor

Bulma tweaks to put the new UI on Ed Broking

21-10-21

Background work on UI facelift

07-10-21

Reinstate download PDF

Adjust jquery CDN for Ed Broking

23-09-21

Better pre processing date handling

Audit database functionality

20-09-21

Improved JSON preprocessor - handles 'only ' (find these fields only when another field exists) and 'regex ' - match the regular expression

Revised and extended with new instructions 'add, subtract, define, if'

if only tests if an attribute exists - not comparing the value.

Picks up the result of Execution to put in the range az_ExecuteResults

updated bug fix to make the validations run properly

13-09-21

more poi hacking to enable keikai to function

adjusted Json import so that it will detect an array of data

25-08-21

removed case sensitivity to some tests - including 'az_ignore'