@@ -64,7 +64,7 @@ public class NewBusinessController {
                 }
                 if (error.length() == 0) {
                     Business b = BusinessDAO.findById(loggedInUser.getUser().getBusinessId());
-                    Business newBusiness = AdminService.registerBusiness(emailUsername, businessName, password, businessName, address1, address2, address3, address4, postcode, telephone, website, b.getBannerColor(), b.getLogo());
+                    Business newBusiness = AdminService.registerBusiness(emailUsername, businessName, password, businessName, address1, address2, address3, address4, postcode, telephone, website, b.getBannerColor(), b.getRibbonColor(), b.getRibbonLinkColor(), b.getSideMenuColor(), b.getSideMenuLinkColor(), b.getLogo());
                     List<LoggedInUser> loggedInUsers = LoginService.loginLoggedInUser(null, emailUsername, password);
                     loggedInUser = null; // null it to be reset. If we can't find it we have a problem . . .
                     if (loggedInUsers.size() > 1){
